2012-08-05  Natalia Portillo  <claunia@claunia.com>

	* Plugins/FAT.cs:
	  Add debug information.
	De-hardcode FAT location, use correct data from BPB or
	  hardcode in case data is empty.
	Show volume size in bytes also.
	Added offset of PB entries on comments.

2012-08-05  Natalia Portillo  <claunia@claunia.com>

	* Plugins/MinixFS.cs:
	* FileSystemIDandChk.csproj:
	  Added Minix V1, V2 and V3 filesystems.

2012-08-05  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs:
	  Added debug information and prevent malformed datetime
	  strings crash ISO9660ToDateTime class

2012-08-05  Natalia Portillo  <claunia@claunia.com>

	* Plugins/ISO9660.cs:
	  Added code preventing it to be run on each partition,
	  because this filesystem will be once and only. Now it runs
	  only one time whenever there are partitions or how many.

	* Plugins/FAT.cs:
	  Added code to handle false positives (FATs can be 1 or 2,
	  maybe 0 in the wild, never bigger).
	Modified for BinaryReader class.

	* Plugins/BFS.cs:
	  Missed negation operand

	* PartPlugins/NeXT.cs:
	* PartPlugins/AppleMap.cs:
	  Added constants and modified for EndianAwareBinaryReader
	  class.

2012-08-05  Natalia Portillo  <claunia@claunia.com>

	* Plugins/ODS.cs:
	  Use StringHandlers class to prevent garbage coming from
	  strings (even if they are not C strings, it does not hurt).

	* Plugins/AppleHFS.cs:
	  Use constants.

	* Plugins/BFS.cs:
	* Plugins/AppleMFS.cs:
	* Plugins/AppleHFSPlus.cs:
	  Use constants and EndianAwareBinaryReader class.

	* Plugins/Opera.cs:
	  Use a superblock structure and EndianAwareBinaryReader
	  class, reduces lots of code.

2012-08-04  Natalia Portillo  <claunia@claunia.com>

	* CToString.cs:
	  Renamed to StringHandlers.cs

	* Plugins/AppleHFS.cs:
	  Modified to use EndianAwareBinaryReader and PascalToString
	  classes

	* FileSystemIDandChk.csproj:
	  CToString.cs renamed to StringHandlers.cs

	* StringHandlers.cs:
	  Added code to convert Pascal string to .NET String
